[package]
name = "amazon-pricing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.1"
regex = "1.6.0"
reqwest = "0.11.11"
serde = "1.0.144"
tokio = {version = "1.21.0", features = ["full"]}
